<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForceOverflowMenu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="Item_1">Item 1</string>
    <string name="Item_2">Item 2</string>
    <string name="Item_3">Item 3</string>
    <string name="Item_4">Item 4</string>
    <string name="Item_5">Item 5</string>

</resources>
