<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_item_1"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/Item_1"/>
    <item
        android:id="@+id/action_item_2"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/Item_2"/>
    <item
        android:id="@+id/action_item_3"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/Item_3"/>
    <item
        android:id="@+id/action_item_4"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/Item_4"/>
    <item
        android:id="@+id/action_item_5"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/Item_5"/>

</menu>
